--- a/open-vpn.conf
+++ b/open-vpn.conf
@@ -24,7 +24,7 @@ cipher none
 comp-lzo
 script-security 3
 
-http-proxy 167.71.202.113 8080
+http-proxy xxxxxxxxx 8080
 http-proxy-option CUSTOM-HEADER ""
 http-proxy-option CUSTOM-HEADER "POST https://e9413.g.akamaiedge.net HTTP/1.0" xxxxxxxxx 110 HTTP/1.1""
 route xxxxxxxxx 255.255.255.255 vpn_gateway
