--- a/open-vpn.conf
+++ b/open-vpn.conf
@@ -1,15 +1,13 @@
+# By RadzVPN
 auth-user-pass
 client
 dev tun
 proto tcp
-
 remote xxxxxxxxx 1194
 connect-retry 1
 connect-timeout 120
-
 resolv-retry infinite
 route-method exe
-
 nobind
 ping 5
 ping-restart 30
@@ -17,16 +15,13 @@ persist-key
 persist-tun
 persist-remote-ip
 mute-replay-warnings
-
 verb 2
-
 cipher none
 comp-lzo
 script-security 3
-
 http-proxy xxxxxxxxx 8080
 http-proxy-option CUSTOM-HEADER ""
-http-proxy-option CUSTOM-HEADER "POST https://e9413.g.akamaiedge.net HTTP/1.0" xxxxxxxxx 110 HTTP/1.1""
+http-proxy-option CUSTOM-HEADER "POST https://viber.com HTTP/1.0" xxxxxxxxx 110 HTTP/1.1""
 route xxxxxxxxx 255.255.255.255 vpn_gateway
 dhcp-option DNS 9.9.9.9
 dhcp-option DNS 1.1.1.1
