--- a/open-vpn.conf
+++ b/open-vpn.conf
@@ -1,72 +1,35 @@
 # Radz Script 2020
-# Just Remove all the # if were you are prefer to use
 # Enjoy
+# Mobile
 
-
-# This is for Mobile
-
-#auth-user-pass
-#client
-#dev tun
-#proto tcp
-#remote xxxxxxxxx 1194
-#connect-retry 1
-#connect-timeout 120
-#resolv-retry infinite
-#route-method exe
-#nobind
-#ping 5
-#ping-restart 30
-#persist-key
-#persist-tun
-#persist-remote-ip
-#mute-replay-warnings
-#verb 2
-#cipher none
-#comp-lzo
-#script-security 3
-#http-proxy xxxxxxxxx 8080
-#http-proxy-option CUSTOM-HEADER ""
-#http-proxy-option CUSTOM-HEADER "POST https://viber.com HTTP/1.0" 128.199.169.131 110 HTTP/1.1""
-#route 128.199.169.131 255.255.255.255 vpn_gateway
-#dhcp-option DNS 9.9.9.9
-#dhcp-option DNS 1.1.1.1
-#http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
-#http-proxy-option CUSTOM-HEADER "Proxy-Connection: Keep-Alive"
-
-
-
-
-# This is for modem
-# If Restart pause error, just change your WAN IP
-
+auth-user-pass
 client
 dev tun
 proto tcp
 remote xxxxxxxxx 1194
+connect-retry 1
+connect-timeout 120
+resolv-retry infinite
+route-method exe
+nobind
+ping 5
+ping-restart 30
 persist-key
 persist-tun
-dev tun
-pull
-resolv-retry infinite
-nobind
-comp-lzo
-ns-cert-type server
-verb 3
-mute 2
+persist-remote-ip
 mute-replay-warnings
-auth-user-pass
-redirect-gateway def1
-script-security 2
-route 0.0.0.0 0.0.0.0
-route-method exe
-route-delay 2
+verb 2
 cipher none
-http-proxy www.viber.com.edgekey.net.0005proxy.radzvpn.com 8080
-http-proxy-option VERSION 1.1
-http-proxy-option CUSTOM-HEADER Host www.viber.com.edgekey.net
-http-proxy-option CUSTOM-HEADER X-Online-Host www.viber.com.edgekey.net
-http-proxy-option CUSTOM-HEADER X-Forwarded-For www.viber.com.edgekey.net
+comp-lzo
+script-security 3
+http-proxy xxxxxxxxx 8080
+http-proxy-option CUSTOM-HEADER ""
+http-proxy-option CUSTOM-HEADER "POST https://viber.com HTTP/1.0" xxxxxxxxx 110 HTTP/1.1""
+route 128.199.169.131 255.255.255.255 vpn_gateway
+dhcp-option DNS 9.9.9.9
+dhcp-option DNS 1.1.1.1
+http-proxy-option CUSTOM-HEADER "Connection: Keep-Alive"
+http-proxy-option CUSTOM-HEADER "Proxy-Connection: Keep-Alive"
 
 
 <ca>
